force-app/main/default/objects/SF_Mapping__c/SF_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object is a lookup table that maps SF data and an external application</description>
    <label>SF Mapping</label>
    <nameField>
        <displayFormat>SFMN-{0000}</displayFormat>
        <label>SF Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>