force-app/main/default/objects/SF_Mapping__c/fields/External_Application__c.field-meta.xml
<CustomField>
    <fullName>External_Application__c</fullName>
    <description>Lists the external applications that interface with Salesforce</description>
    <label>External Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>