force-app/main/default/objects/SF_Mapping__c/fields/External_Application_Value__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Value__c</fullName>
    <description>Value in the external application</description>
    <label>External Application Value</label>
    <length>64</length>
    <type>Text</type>
</CustomField>