force-app/main/default/objects/SF_Mapping__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The type of the field that has different values between the applications and requires a mapping.</description>
    <label>Field Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>